--- a/css/config.css
+++ b/css/config.css
@@ -1,6 +1,20 @@
+/*FONT*/
+  /*LOGO FONT*/
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+body{
+  font-size: 14px;
+}
 .middle {
   margin: 0 auto;
 }
 .center{
   text-align: center;
+}
+.logo{
+font-family: 'Montserrat', sans-serif;
+  font-size: 26px;
+}
+span.subtitle.center{
+  font-size: 17px;
+  color: #655D5E;
 }
