--- a/css/footer.css
+++ b/css/footer.css
@@ -3,5 +3,5 @@ footer {
   max-width: 80%;
   height: auto;
   max-height: 100%;
-  border-top: 1px solid #8e8e8e;
+  border-top: 1px solid #e7e7e7;
 }
